--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:itemBackground">@color/colorPrimaryDark</item>
     </style>
 
     <style name="AppTheme.FullScreen.NoActionBar" parent="@style/Theme.AppCompat.Light.NoActionBar">
