--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,110 +7,88 @@
     android:theme="@style/MainTheme"
     tools:context=".Activities.MainActivity">
 
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/NavView"
-        android:layout_width="0dp"
-        android:layout_height="53dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/currentlyPlaying"
+        android:layout_alignParentBottom="true"
         android:background="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/constraintlayout"
         app:menu="@menu/bottom_navigation" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/currentlyPlaying"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.78" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintlayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_below="@id/fragment"
         android:background="#E60E0E0E"
-        app:layout_constraintBottom_toTopOf="@id/NavView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline2"
-        tools:context=".Activities.Home">
-
-        <ImageView
-            android:id="@+id/stateImage"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/seekBar"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/ic_play_arrow_white_24dp"
-            android:tag="playing"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/seekBar" />
+        android:orientation="vertical">
 
         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginBottom="7dp"
+            android:orientation="horizontal">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/currentPlayingImage"
-            android:layout_width="80dp"
-            android:layout_height="70dp"
-            android:layout_below="@id/seekBar"
-            android:layout_marginStart="15dp"
-            app:civ_border_color="#2763CC"
-            app:civ_border_width="2dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/seekBar" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/currentPlayingImage"
+                android:layout_width="80dp"
+                android:layout_height="90dp"
+                android:layout_below="@id/seekBar"
+                android:layout_marginStart="15dp"
+                android:src="@color/colorAccent"
+                app:civ_border_color="#2763CC"
+                app:civ_border_width="2dp" />
 
-        <TextView
-            android:id="@+id/currentPlayingSong"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/seekBar"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_toEndOf="@id/currentPlayingImage"
-            android:text="Nothing is being played"
-            android:textColor="#FDFDFD"
-            app:layout_constraintStart_toEndOf="@id/currentPlayingImage"
-            app:layout_constraintTop_toBottomOf="@id/seekBar" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/currentPlayingBand"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/currentPlayingSong"
-            android:layout_marginTop="3dp"
-            android:text="Band Name"
-            android:textColor="#E6D3D2D2"
-            app:layout_constraintEnd_toEndOf="@id/currentPlayingSong"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintStart_toStartOf="@id/currentPlayingSong"
-            app:layout_constraintTop_toBottomOf="@id/currentPlayingSong" />
+                <TextView
+                    android:id="@+id/currentPlayingSong"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/seekBar"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Nothing is being played"
+                    android:textColor="#FDFDFD" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/currentPlayingBand"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/currentPlayingSong"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="3dp"
+                    android:text="Band Name"
+                    android:textColor="#E6D3D2D2" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/stateImage"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/seekBar"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:src="@drawable/ic_play_arrow_white_24dp"
+                android:tag="playing" />
+        </LinearLayout>
+    </LinearLayout>
 
     <fragment
         android:id="@+id/fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="560dp"
         app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@id/guideline2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/nav_graph" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
